[gd_scene load_steps=3 format=3 uid="uid://dv5ce46e4gdq7"]

[ext_resource type="Script" uid="uid://c6k6w2aoeicw5" path="res://Simon/Scripts/simon_menu.gd" id="1_7oi58"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufuux"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="SimonMenu" type="Panel"]
process_mode = 3
offset_right = 640.0
offset_bottom = 360.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ufuux")
script = ExtResource("1_7oi58")
metadata/_edit_group_ = true

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="TitleContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SimonLabel" type="Label" parent="Container/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Simon"

[node name="CommLabel" type="Label" parent="Container/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 14
text = "Color Patterns 101
A Course for Cats"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ResumeBtn" type="Button" parent="Container/MenuContainer"]
visible = false
layout_mode = 2
text = "Resume Game"

[node name="NewBtn" type="Button" parent="Container/MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="ScoresBtn" type="Button" parent="Container/MenuContainer"]
layout_mode = 2
disabled = true
text = "High Scores"

[node name="ReturnBtn" type="Button" parent="Container/MenuContainer"]
layout_mode = 2
text = "Game Selection"

[node name="ExitBtn" type="Button" parent="Container/MenuContainer"]
layout_mode = 2
text = "Exit"

[connection signal="gui_input" from="Container/MenuContainer/ResumeBtn" to="." method="_on_resume_btn_gui_input"]
[connection signal="gui_input" from="Container/MenuContainer/NewBtn" to="." method="_on_new_btn_gui_input"]
[connection signal="gui_input" from="Container/MenuContainer/ScoresBtn" to="." method="_on_scores_btn_gui_input"]
[connection signal="gui_input" from="Container/MenuContainer/ReturnBtn" to="." method="_on_return_btn_gui_input"]
[connection signal="gui_input" from="Container/MenuContainer/ExitBtn" to="." method="_on_exit_btn_gui_input"]
